fixed uneven spacing between elements inside carousel

--- a/styles.css
+++ b/styles.css
@@ -390,7 +390,7 @@ input[type=search]::-webkit-search-results-decoration { display: none; }
   font-style: italic;
   position: absolute;
   top: 40vh;
-  left: 31vw;
+  left: 35vw;
 }
 #ScrollToCatalog {
   position: absolute;
@@ -441,50 +441,69 @@ input[type=search]::-webkit-search-results-decoration { display: none; }
   padding: 20px;
 }
 
-.catalog-grid-item {
+.item-card {
   background-color: brown;
   /* border: 1px solid darkred; */
   border-radius: 6px;
   height: 500px;
-  width: 22vw;
   margin-right: 10px;
   /* padding: 1vh 1vw;
   margin: 1vh 1vw; */
+  font-family: sans-serif;
   font-size: 20px;
   position: relative;
   transition: all 0.3s ease-in-out;
   transform: scale(1);
 }
-.catalog-grid-item .card-body {
-  width: 250px;
+/* .catalog-grid-item .card-body {
+  width: 22vw;
   padding: 0 0 15px 20px;
+} */
+.item-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  /* width: 40%; */
+}
+.item-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 /* .catalog-grid-item:hover {
   transform: scale(1);
 } */
-.catalog-grid-item .item-title {
-  font-size: 16px;
+.item-card .card-body {
+  padding: 0 15px;
 }
-.catalog-grid-item .item-description {
+.item-card .item-title {
+  font-size: 16px;
+  margin: 10px 0 !important;
+}
+.item-card .item-description {
   font-size: 14px;
+  font-variant: normal;
   text-align: justify;
 }
-.catalog-grid-item .see-more-txt {
+.item-card .see-more-txt {
   cursor: pointer;
   font-weight: 600;
   transition: all .3s ease-in-out;
   border-bottom: 1px solid transparent;
 }
-.catalog-grid-item .see-more-txt:hover {
+.item-card .see-more-txt:hover {
   border-bottom: 1px solid var(--white);
 }
 .item-card-footer-wrapper {
+  align-items: center;
   background-color: transparent;
   display: grid;
+  font-size: 14px;
   gap: 5px;
   overflow: hidden;
   position: absolute;
   bottom: 20px;
+}
+.item-card-footer-wrapper .atc-btn {
+  font-family: sans-serif;
+  font-size: 14px;
 }
 
 .item-card-footer-item {
@@ -560,7 +579,7 @@ footer {
 }
 .carousel {
   width: 90vw;
-  height:580px;
+  height: 580px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -573,19 +592,18 @@ footer {
   position: relative;
 }
 .content_inner_slider {
-  padding: 0 70px;
+  padding: 0 0;
   width: 100%;
   height: 100%;
   display: flex;
 }
 .content-chunk {
   display: flex;
-  flex-direction: row;
+  flex: 0 0 100%;
+  justify-content: space-evenly;
 }
-.img {
-  min-width: 80vw;
-  height: 100%;
-  object-fit: cover;
+.content-chunk.active {
+  visibility: visible;
 }
 .prev_button {
   left: 0;
